--- a/test/actual_results/stradivari_posts.xhtml
+++ b/test/actual_results/stradivari_posts.xhtml
@@ -13,105 +13,105 @@
     </tr>
   </thead>
   <tbody>
-    <tr id='post_row_'>
+    <tr id='post_row_1'>
       <td class=' title '>post title 1</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
-    <tr id='post_row_'>
+    <tr id='post_row_2'>
       <td class=' title '>post title 2</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
-    <tr id='post_row_'>
+    <tr id='post_row_3'>
       <td class=' title '>post title 3</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
-    <tr id='post_row_'>
+    <tr id='post_row_4'>
       <td class=' title '>post title 4</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
-    <tr id='post_row_'>
+    <tr id='post_row_5'>
       <td class=' title '>post title 5</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
-    <tr id='post_row_'>
+    <tr id='post_row_6'>
       <td class=' title '>post title 6</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
-    <tr id='post_row_'>
+    <tr id='post_row_7'>
       <td class=' title '>post title 7</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
-    <tr id='post_row_'>
+    <tr id='post_row_8'>
       <td class=' title '>post title 8</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
-    <tr id='post_row_'>
+    <tr id='post_row_9'>
       <td class=' title '>post title 9</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
-    <tr id='post_row_'>
+    <tr id='post_row_10'>
       <td class=' title '>post title 10</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
-    <tr id='post_row_'>
+    <tr id='post_row_11'>
       <td class=' title '>post title 11</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
-    <tr id='post_row_'>
+    <tr id='post_row_12'>
       <td class=' title '>post title 12</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
-    <tr id='post_row_'>
+    <tr id='post_row_13'>
       <td class=' title '>post title 13</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
-    <tr id='post_row_'>
+    <tr id='post_row_14'>
       <td class=' title '>post title 14</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
-    <tr id='post_row_'>
+    <tr id='post_row_15'>
       <td class=' title '>post title 15</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
-    <tr id='post_row_'>
+    <tr id='post_row_16'>
       <td class=' title '>post title 16</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
-    <tr id='post_row_'>
+    <tr id='post_row_17'>
       <td class=' title '>post title 17</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
-    <tr id='post_row_'>
+    <tr id='post_row_18'>
       <td class=' title '>post title 18</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
-    <tr id='post_row_'>
+    <tr id='post_row_19'>
       <td class=' title '>post title 19</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
-    <tr id='post_row_'>
+    <tr id='post_row_20'>
       <td class=' title '>post title 20</td>
       <td class=' body '>post body</td>
-      <td></td>
+      <td class=' user_id '>1</td>
     </tr>
   </tbody>
 </table>
