--- a/spec/expected_results/posts.html
+++ b/spec/expected_results/posts.html
@@ -123,6 +123,31 @@ Body
 <td class=' title '>post title 20</td>
 <td class=' body '>post body</td>
 </tr>
+<tr id='post_row_21'>
+<td class=' id '>21</td>
+<td class=' title '>post title 21</td>
+<td class=' body '>post body</td>
+</tr>
+<tr id='post_row_22'>
+<td class=' id '>22</td>
+<td class=' title '>post title 22</td>
+<td class=' body '>post body</td>
+</tr>
+<tr id='post_row_23'>
+<td class=' id '>23</td>
+<td class=' title '>post title 23</td>
+<td class=' body '>post body</td>
+</tr>
+<tr id='post_row_24'>
+<td class=' id '>24</td>
+<td class=' title '>post title 24</td>
+<td class=' body '>post body</td>
+</tr>
+<tr id='post_row_25'>
+<td class=' id '>25</td>
+<td class=' title '>post title 25</td>
+<td class=' body '>post body</td>
+</tr>
 </tbody>
 <tfoot>
 <tr>
@@ -131,7 +156,7 @@ Body
 <a class='' href='/welcome/posts.csv'>Export to CSV...</a>
 
 </div>
-<div class='counters pull-right'>1 to 20 out of 20 records displayed</div>
+<div class='counters pull-right'>1 to 25 out of 50 records displayed</div>
 <div class='clearfix'></div>
 </td>
 </tr>
