removing dummy app for testing
controllers removed: now an anonymous controller is generated on the
fly during the tests
models folder moved in spec/support/models
test files updated
capybara is no longer used and it was removed

--- a/spec/actual_results/posts.html
+++ b/spec/actual_results/posts.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>StradivariTestApp</title>
-  <link data-turbolinks-track="true" href="/assets/application.css" media="all" rel="stylesheet" />
-  <script data-turbolinks-track="true" src="/assets/application.js"></script>
-  
-</head>
-<body>
-
 <table class='table table-hover'>
 <thead>
 <tr>
@@ -153,7 +143,7 @@ Body
 <tr>
 <td colspan='3'>
 <div class='download pull-left'>
-<a class='' href='/welcome/posts.csv'>Export to CSV...</a>
+<a class='' href='/anonymous/posts.csv'>Export to CSV...</a>
 
 </div>
 <div class='counters pull-right'>1 to 25 out of 50 records displayed</div>
@@ -162,7 +152,3 @@ Body
 </tr>
 </tfoot>
 </table>
-
-
-</body>
-</html>
