--- a/spec/expected_results/index.html
+++ b/spec/expected_results/index.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>StradivariTestApp</title>
-  <link data-turbolinks-track="true" href="/assets/application.css" media="all" rel="stylesheet" />
-  <script data-turbolinks-track="true" src="/assets/application.js"></script>
-  
-</head>
-<body>
-
 <table class='table table-hover'>
 <thead>
 <tr>
@@ -465,7 +455,7 @@ text field value
 <tr>
 <td colspan='7'>
 <div class='download pull-left'>
-<a class='' href='/welcome/index.xlsx'>Export to Excel...</a>
+<a class='' href='/anonymous/index.xlsx'>Export to Excel...</a>
 
 </div>
 <div class='counters pull-right'>1 to 25 out of 50 records displayed</div>
@@ -474,7 +464,3 @@ text field value
 </tr>
 </tfoot>
 </table>
-
-
-</body>
-</html>
